@@ -1,5 +1,15 @@
 2015-05-20  Mark Wielaard  <mjw@redhat.com>
 
+	* addr2line.c (OPT_PRETTY): New constant define.
+	(argp_option): Add "pretty-print".
+	(pretty): New static bool.
+	(parse_opt): Set pretty.
+	(print_dwarf_function): Adjust output when pretty is set.
+	(print_addrsym): Likewise.
+	(handle_address): Likewise.
+
+2015-05-20  Mark Wielaard  <mjw@redhat.com>
+
 	* Makefile.am (addr2line_LDADD): Add demanglelib.
 	* addr2line.c (argp_option): Move demangle under output format.
 	(demangle): New static bool.
