@@ -4,6 +4,7 @@ libdw: Install new header elfutils/known-dwarf.h.
 
 addr2line: New option -a, --addresses to print address before each entry.
            New option -C, --demangle to show demangled symbols.
+           New option --pretty-print to print all information on one line.
 
 Version 0.161
 
